--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
-                        <h2>Our Team</h2>
+                        <h2>NOSSO TIME</h2>
                         <div class="heading-line"></div>
-                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                        <p>quem faz isso tudo funcionar de verdade
                         </p>
                     </div>
                 </div>
@@ -377,29 +377,15 @@
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                     <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
                         <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
-                        <h4>Dominique Vroslav</h4>
-                        <p>Art Director</p>
+                        <h4>Rafael Umbelino</h4>
+                        <p>o cérebro tecnológico</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
                     <div class="box-team wow bounceInUp">
                         <img src="img/team/2.jpg" alt="" class="img-circle img-responsive" />
-                        <h4>Thomas Jeffersonn</h4>
-                        <p>Web Designer</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
-                    <div class="box-team wow bounceInUp">
-                        <img src="img/team/3.jpg" alt="" class="img-circle img-responsive" />
-                        <h4>Nola Maurin</h4>
-                        <p>Illustrator</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
-                    <div class="box-team wow bounceInUp">
-                        <img src="img/team/4.jpg" alt="" class="img-circle img-responsive" />
-                        <h4>Mira Ladovic</h4>
-                        <p>Typographer</p>
+                        <h4>Mônica Umbelino</h4>
+                        <p>a estrategista</p>
                     </div>
                 </div>
             </div>
@@ -412,49 +398,49 @@
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
-                        <h2>Contact us</h2>
+                        <h2>CONTATO</h2>
                         <div class="heading-line"></div>
-                        <p>If you have any question or just want to say 'hello' to Alstar web studio please fill out form below and we will be get in touch with you within 24 hours. </p>
+                        <p>Se você quer saber o que mais a gente pode fazer por você, manda um oi! Estamos sempre apostos. </p>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
-                    <div id="sendmessage">Your message has been sent. Thank you!</div>
+                    <div id="sendmessage">Sua mensagem foi enviada! Entraremos em contato em até 12h.</div>
                     <div id="errormessage"></div>
 
                     <form action="" method="post" class="form-horizontal contactForm" role="form">
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                                 <div class="validation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Please enter a valid email" />
                                 <div class="validation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                                 <div class="validation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Vai lá, escreve pra gente!" placeholder="Mensagem"></textarea>
                                 <div class="validation"></div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-8">
-                                <button type="submit" class="btn btn-theme btn-lg btn-block">Send message</button>
+                                <button type="submit" class="btn btn-theme btn-lg btn-block">Enviar</button>
                             </div>
                         </div>
                     </form>
@@ -472,18 +458,18 @@
                 <div class="col-md-4">
                     <div class="contact-widget wow bounceInLeft">
                         <i class="fa fa-map-marker fa-4x"></i>
-                        <h5>Main Office</h5>
+                        <h5>SEDE</h5>
                         <p>
-                            109 Borough High Street,<br />London SE1 1NL
+                            Rua Manoel Rosa, 116<br />São José - SC
                         </p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="contact-widget wow bounceInUp">
                         <i class="fa fa-phone fa-4x"></i>
-                        <h5>Call</h5>
+                        <h5>Nossos Telefones</h5>
                         <p>
-                            +1 111 9998 7774<br> +1 245 4544 6855
+                            +55 48 998.142.779<br> +55 48 999.676.020
 
                         </p>
                     </div>
@@ -491,36 +477,22 @@
                 <div class="col-md-4">
                     <div class="contact-widget wow bounceInRight">
                         <i class="fa fa-envelope fa-4x"></i>
-                        <h5>Email us</h5>
+                        <h5>Nosso e-mail</h5>
                         <p>
-                            hello@alstarstudio.com<br />sales@alstarstudio.com
+                            sasfln@sasfln.com.br<br />
                         </p>
                     </div>
                 </div>
             </div>
             <div class="row mar-top30">
                 <div class="col-md-12">
-                    <h5>We're on social networks</h5>
+                    <h5>Claro que a gente tem facebook!</h5>
                     <ul class="social-network">
                         <li>
                             <a href="#">
                                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span></a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
-                </span></a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span></a>
                         </li>
                         <li>
@@ -541,7 +513,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Copyright &copy; Alstar. All rights reserved.</p>
+                    <p>Copyright &copy; 2019</p>
                     <div class="credits">
                         <!--
               All the links in the footer should remain intact.
@@ -549,7 +521,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Alstar
             -->
-                        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                        Feito por <a href="https://www.sasfln.com.br/">.·.S.A.S.·.</a>
                     </div>
                 </div>
             </div>
