--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     <div id="sendmessage">Sua mensagem foi enviada! Entraremos em contato em até 12h.</div>
                     <div id="errormessage"></div>
 
-                    <form action="" method="post" class="form-horizontal contactForm" role="form">
+                    <form action="http://formspree.io/umbelino.rafael@gmail.com" method="post" class="form-horizontal contactForm" role="form">
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -541,7 +541,6 @@
     <script src="js/stellar.js"></script>
     <!-- Contact Form JavaScript File -->
     <script src="contactform/contactform.js"></script>
-
     <!-- Template Custom Javascript File -->
     <script src="js/custom.js"></script>
 
