--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-8">
-                                <button type="submit" class="btn btn-theme btn-lg btn-block">Enviar</button>
+                                <input type="submit" class="btn btn-theme btn-lg btn-block" value="Enviar"></button>
                             </div>
                         </div>
                     </form>
