--- a/index.html
+++ b/index.html
@@ -408,26 +408,26 @@
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div id="sendmessage">Sua mensagem foi enviada! Entraremos em contato em até 12h.</div>
-                    <div id="errormessage"></div>
+                    <div id="errormessage">Vixi! Alguma coisa deu errado!</div>
 
                     <form action="https://usebasin.com/f/abc2dd40006e" method="post" class="form-horizontal contactForm" role="form">
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, no mínimo 4 letras" />
                                 <div class="validation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Please enter a valid email" />
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu e-mail" data-rule="email" data-msg="Este não parece um email válido" />
                                 <div class="validation"></div>
                             </div>
                         </div>
 
                         <div class="col-md-offset-2 col-md-8">
                             <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Escreve mais um pouquinho" />
                                 <div class="validation"></div>
                             </div>
                         </div>
