Tiddying up everything

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-          <span class="sr-only">Toggle nav</span>
+          <span class="sr-only">Menu</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -70,7 +70,7 @@
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">.·. S.A.S .·.</h2>
-                                <p class="animated fadeInUp">Soluções de TI para pequenas empresas.</p>
+                                <p class="animated fadeInUp">soluções de TI para pequenas empresas.</p>
                                 <a href="#about" class="btn-get-started animated fadeInUp">Nossa Missão</a>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                                 <h2 class="animated fadeInDown">Suporte Técnico</span>
                                 </h2>
                                 <p class="animated fadeInUp">cuidando de tudo para você prosperar</p>
-                                <a href="#about" class="btn-get-started animated fadeInUp">saiba como</a>
+                                <a href="#services" class="btn-get-started animated fadeInUp">saiba como</a>
                             </div>
                         </div>
                     </div>
@@ -96,8 +96,8 @@
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">Estrutura de TI</span>
                                 </h2>
-                                <p class="animated fadeInUp">Tudo que você precisa para começar</p>
-                                <a href="#about" class="btn-get-started animated fadeInUp">vamos lá?</a>
+                                <p class="animated fadeInUp">tudo que você precisa para começar</p>
+                                <a href="#services" class="btn-get-started animated fadeInUp">e para continuar também</a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                 <h2 class="animated fadeInDown">Desenvolvimento Web</span>
                                 </h2>
                                 <p class="animated fadeInUp">sua empresa na internet</p>
-                                <a href="#about" class="btn-get-started animated fadeInUp">precisa de um site?</a>
+                                <a href="#services" class="btn-get-started animated fadeInUp">precisa de um site? a gente faz</a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,19 @@
                                 <h2 class="animated fadeInDown">Servidores</span>
                                 </h2>
                                 <p class="animated fadeInUp">para empresas fortes</p>
-                                <a href="#about" class="btn-get-started animated fadeInUp">solicite um projeto</a>
+                                <a href="#services" class="btn-get-started animated fadeInUp">soluções diretas</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slide 6 -->
+                    <div class="item">
+                        <div class="carousel-background"><img src="img/intro/5.jpg" alt=""></div>
+                        <div class="carousel-container">
+                            <div class="carousel-content">
+                                <h2 class="animated fadeInDown">Redes</span>
+                                </h2>
+                                <p class="animated fadeInUp">conectando você e seu cliente</p>
+                                <a href="#services" class="btn-get-started animated fadeInUp">conectar</a>
                             </div>
                         </div>
                     </div>
@@ -132,12 +144,12 @@
 
                 <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon fa fa-angle-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">Anterior</span>
                 </a>
 
                 <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon fa fa-angle-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
+                    <span class="sr-only">Próximo</span>
                 </a>
 
             </div>
@@ -252,6 +264,21 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="item">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-offset-1 col-md-6">
+                                        <div class="wow bounceInLeft">
+                                            <h4>redes</h4>
+                                            <p>conectando seu negócio e seus clientes, garantindo que nada impeça você de vencer</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12 col-md-5">
+                                        <div class="screenshot wow bounceInRight">
+                                            <img src="img/screenshots/3.png" class="img-responsive" alt="" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <!-- Indicators -->
@@ -259,6 +286,8 @@
                             <li data-target="#carousel-service" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-service" data-slide-to="1"></li>
                             <li data-target="#carousel-service" data-slide-to="2"></li>
+                            <li data-target="#carousel-service" data-slide-to="3"></li>
+                            <li data-target="#carousel-service" data-slide-to="4"></li>
                         </ol>
                     </div>
                 </div>
