--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
                             <li data-target="#carousel-service" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-service" data-slide-to="1" class="active"></li>
-                            <li data-target="#carousel-service" data-slide-to="2" class="active"></li>
-                            <li data-target="#carousel-service" data-slide-to="3" class="active"></li>
-                            <li data-target="#carousel-service" data-slide-to="4" class="active"></li>
+                            <li data-target="#carousel-service" data-slide-to="1"></li>
+                            <li data-target="#carousel-service" data-slide-to="2"></li>
+                            <li data-target="#carousel-service" data-slide-to="3"></li>
+                            <li data-target="#carousel-service" data-slide-to="4"></li>
                         </ol>
                     </div>
                 </div>
