--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+                <div class="col-xs-12 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-sm-6 col-md-6 col-lg-6">
                     <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
                         <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
                         <h4>Rafael Umbelino</h4>
