Tiddying up everything

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <p>o cérebro tecnológico</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
                     <div class="box-team wow bounceInUp">
                         <img src="img/team/2.jpg" alt="" class="img-circle img-responsive" />
                         <h4>Mônica Umbelino</h4>
