--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </section>
 
     <!-- Works -->
-    <section id="portfolio" class="home-section bg-gray">
+    <!--   <section id="portfolio" class="home-section bg-gray">
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
@@ -375,10 +375,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Parallax 2 -->
-    <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
+    <!--   <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -399,7 +399,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Team -->
     <section id="team" class="home-section bg-white">
