--- a/index.html
+++ b/index.html
@@ -378,28 +378,49 @@
     </section>-->
 
     <!-- Parallax 2 -->
-    <!--   <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
+    <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <ul class="clients">
+                <div class="col-sm-4">
+                    <ul class="technologies">
                         <li class="wow fadeInDown" data-wow-delay="0.3s">
-                            <a href="#"><img src="img/clients/1.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/aruba.png" alt="" /></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="0.6s">
-                            <a href="#"><img src="img/clients/2.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/mikrotik.png" alt="" /></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="0.9s">
-                            <a href="#"><img src="img/clients/3.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/hpe.png" alt="" /></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/clients/4.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/lenovo.png" alt="" /></a>
+                        </li>
+                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                            <a href="#"><img src="img/techs/dell.png" alt="" /></a>
+                        </li>
+                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                            <a href="#"><img src="img/techs/hp.png" alt="" /></a>
+                        </li>
+                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                            <a href="#"><img src="img/techs/citrix.png" alt="" /></a>
+                        </li>
+                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                            <a href="#"><img src="img/techs/linux.png" alt="" /></a>
+                        </li>
+                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                            <a href="#"><img src="img/techs/microsoft.png" alt="" /></a>
+                        </li>
+                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                            <a href="#"><img src="img/techs/teamviewer.png" alt="" /></a>
+                        </li>
+                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                            <a href="#"><img src="img/techs/bitdefender.png" alt="" /></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-    </section>-->
+    </section>
 
     <!-- Team -->
     <section id="team" class="home-section bg-white">
