--- a/index.html
+++ b/index.html
@@ -384,37 +384,37 @@
                 <div class="col-sm-4">
                     <ul class="technologies">
                         <li class="wow fadeInDown" data-wow-delay="0.3s">
-                            <a href="#"><img src="img/techs/aruba.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/aruba.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="0.6s">
-                            <a href="#"><img src="img/techs/mikrotik.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/mikrotik.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="0.9s">
-                            <a href="#"><img src="img/techs/hpe.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/hpe.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/lenovo.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/lenovo.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/dell.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/dell.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/hp.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/hp.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/citrix.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/citrix.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/linux.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/linux.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/microsoft.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/microsoft.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/teamviewer.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/teamviewer.png" alt="" class="img-fluid"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.1s">
-                            <a href="#"><img src="img/techs/bitdefender.png" alt="" /></a>
+                            <a href="#"><img src="img/techs/bitdefender.png" alt="" class="img-fluid"></a>
                         </li>
                     </ul>
                 </div>
