Tiddying up everything

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <ul class="technologies">
                         <li class="wow fadeInDown" data-wow-delay="0.3s">
                             <a href="#"><img src="img/techs/aruba.png" alt="" class="img-responsive"></a>
@@ -392,28 +392,34 @@
                         <li class="wow fadeInDown" data-wow-delay="0.9s">
                             <a href="#"><img src="img/techs/hpe.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                        <li class="wow fadeInDown" data-wow-delay="1.2s">
                             <a href="#"><img src="img/techs/lenovo.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                </div>
+                <div class="col-sm-3">
+                    <ul class="technologies">
+                        <li class="wow fadeInDown" data-wow-delay="1.5s">
                             <a href="#"><img src="img/techs/dell.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                        <li class="wow fadeInDown" data-wow-delay="1.8s">
                             <a href="#"><img src="img/techs/hp.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                        <li class="wow fadeInDown" data-wow-delay="2.1s">
                             <a href="#"><img src="img/techs/citrix.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                        <li class="wow fadeInDown" data-wow-delay="2.4s">
                             <a href="#"><img src="img/techs/linux.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                </div>
+                <div class="col-sm-3">
+                    <ul class="technologies">
+                        <li class="wow fadeInDown" data-wow-delay="2.7s">
                             <a href="#"><img src="img/techs/microsoft.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                        <li class="wow fadeInDown" data-wow-delay="3.0s">
                             <a href="#"><img src="img/techs/teamviewer.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.1s">
+                        <li class="wow fadeInDown" data-wow-delay="3.3s">
                             <a href="#"><img src="img/techs/bitdefender.png" alt="" class="img-responsive"></a>
                         </li>
                     </ul>
