Tiddying up everything

--- a/index.html
+++ b/index.html
@@ -399,28 +399,28 @@
                 <div class="col-sm-3">
                     <ul class="technologies">
                         <li class="wow fadeInDown" data-wow-delay="1.5s">
-                            <a href="#"><img src="img/techs/dell.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="img/techs/dell.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="1.8s">
-                            <a href="#"><img src="img/techs/hp.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="img/techs/hp.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="2.1s">
-                            <a href="#"><img src="img/techs/citrix.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="img/techs/citrix.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="2.4s">
-                            <a href="#"><img src="img/techs/linux.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="img/techs/linux.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                 </div>
                 <div class="col-sm-3">
                     <ul class="technologies">
                         <li class="wow fadeInDown" data-wow-delay="2.7s">
-                            <a href="#"><img src="img/techs/microsoft.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="img/techs/microsoft.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="3.0s">
-                            <a href="#"><img src="img/techs/teamviewer.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="img/techs/teamviewer.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="3.3s">
-                            <a href="#"><img src="img/techs/bitdefender.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="img/techs/bitdefender.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                     </ul>
                 </div>
