--- a/index.html
+++ b/index.html
@@ -381,45 +381,45 @@
     <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-offset-3 col-sm-3">
                     <ul class="technologies">
-                        <li class="wow fadeInDown" data-wow-delay="0.3s">
+                        <li class="wow fadeInDown" data-wow-delay="1.0s">
                             <a href="#"><img src="img/techs/aruba.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="0.6s">
+                        <li class="wow fadeInDown" data-wow-delay="2.0s">
                             <a href="#"><img src="img/techs/mikrotik.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="0.9s">
+                        <li class="wow fadeInDown" data-wow-delay="3.0s">
                             <a href="#"><img src="img/techs/hpe.png" alt="" class="img-responsive"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.2s">
+                        <li class="wow fadeInDown" data-wow-delay="4.0s">
                             <a href="#"><img src="img/techs/lenovo.png" alt="" class="img-responsive"></a>
                         </li>
                 </div>
                 <div class="col-sm-3">
                     <ul class="technologies">
-                        <li class="wow fadeInDown" data-wow-delay="1.5s">
+                        <li class="wow fadeInDown" data-wow-delay="2.0s">
                             <a href="#"><img src="img/techs/dell.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="1.8s">
+                        <li class="wow fadeInDown" data-wow-delay="2.0s">
                             <a href="#"><img src="img/techs/hp.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="2.1s">
+                        <li class="wow fadeInDown" data-wow-delay="3.0s">
                             <a href="#"><img src="img/techs/citrix.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="2.4s">
+                        <li class="wow fadeInDown" data-wow-delay="4.0s">
                             <a href="#"><img src="img/techs/linux.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                 </div>
                 <div class="col-sm-3">
                     <ul class="technologies">
-                        <li class="wow fadeInDown" data-wow-delay="2.7s">
+                        <li class="wow fadeInDown" data-wow-delay="3.0s">
                             <a href="#"><img src="img/techs/microsoft.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                         <li class="wow fadeInDown" data-wow-delay="3.0s">
                             <a href="#"><img src="img/techs/teamviewer.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
-                        <li class="wow fadeInDown" data-wow-delay="3.3s">
+                        <li class="wow fadeInDown" data-wow-delay="3.0s">
                             <a href="#"><img src="img/techs/bitdefender.png" alt="" class="img-responsive" style="max-height:100%"></a>
                         </li>
                     </ul>
