--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
     <!-- Parallax 2 -->
     <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-offset-3 col-sm-3">
+            <div align="center" class="row">
+                <div class="col-sm-3">
                     <ul class="technologies">
                         <li class="wow fadeInDown" data-wow-delay="1.0s">
                             <a href="#"><img src="img/techs/aruba.png" alt="" class="img-responsive"></a>
