--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     <!-- Parallax 2 -->
     <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
-            <div align="center" class="row">
+            <div class="row center-block">
                 <div class="col-sm-3">
                     <ul class="technologies">
                         <li class="wow fadeInDown" data-wow-delay="1.0s">
