--- a/index.html
+++ b/index.html
@@ -381,8 +381,11 @@
     <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
-                <div class="center-block">
-                    <div class="col-sm-4">
+                <div class="section-heading">
+                    <h2>AS TECNOLOGIAS</h2>
+                    <div class="heading-line"></div>
+                    <p>As tecnologias que apoiam nosso trabalho e vão servir de base para a sua empresa também. <br> Líderes mundiais de tecnologia de ponta servindo à pequenas empresas como a sua, porque você e seu negócio não merecem menos que a perfeição.</p>
+                    <div class="col-xs-4">
                         <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="1.0s">
                                 <a href="#"><img src="img/techs/aruba.png" alt="" class="img-responsive"></a>
@@ -397,7 +400,7 @@
                                 <a href="#"><img src="img/techs/lenovo.png" alt="" class="img-responsive"></a>
                             </li>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-xs-4">
                         <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="2.0s">
                                 <a href="#"><img src="img/techs/dell.png" alt="" class="img-responsive" style="max-height:100%"></a>
@@ -412,7 +415,7 @@
                                 <a href="#"><img src="img/techs/linux.png" alt="" class="img-responsive" style="max-height:100%"></a>
                             </li>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-xs-4">
                         <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="3.0s">
                                 <a href="#"><img src="img/techs/microsoft.png" alt="" class="img-responsive" style="max-height:100%"></a>
