--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                     </div>
                                     <div class="col-sm-12 col-md-5">
                                         <div class="screenshot wow bounceInRight">
-                                            <img src="img/screenshots/3.png" class="img-responsive" alt="" />
+                                            <img src="img/screenshots/4.png" class="img-responsive" alt="" />
                                         </div>
                                     </div>
                                 </div>
@@ -433,7 +433,7 @@
         </div>
     </section>
 
-    <!-- Team -->
+    <!-- Team
     <section id="team" class="home-section bg-white">
         <div class="container">
             <div class="row">
@@ -463,7 +463,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Contact -->
     <section id="contact" class="home-section bg-gray">
