--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     <!-- Parallax 1 -->
     <section id="parallax1" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
+            <div class="row vertical-align">
+                <div class="col-xs-12">
                     <div class="color-light">
                         <h2 class="wow bounceInDown" data-wow-delay="0.5s">trabalhamos para que seus recursos</h2>
                         <p class="lead wow bounceInUp" data-wow-delay="1s">trabalhem para você se desenvolver</p>
