--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="carousel-background"><img src="img/intro/2.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2 class="animated fadeInDown">Suporte Técnico</span>
+                                <h2 class="animated fadeInDown">SUPORTE TÉCNICO</span>
                                 </h2>
                                 <p class="animated fadeInUp">cuidando de tudo para você prosperar</p>
                                 <a href="#services" class="btn-get-started animated fadeInUp">saiba como</a>
@@ -94,7 +94,7 @@
                         <div class="carousel-background"><img src="img/intro/3.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2 class="animated fadeInDown">Estrutura de TI</span>
+                                <h2 class="animated fadeInDown">ESTRUTURA DE TI</span>
                                 </h2>
                                 <p class="animated fadeInUp">tudo que você precisa para começar</p>
                                 <a href="#services" class="btn-get-started animated fadeInUp">e para continuar também</a>
@@ -107,7 +107,7 @@
                         <div class="carousel-background"><img src="img/intro/4.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2 class="animated fadeInDown">Desenvolvimento Web</span>
+                                <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</span>
                                 </h2>
                                 <p class="animated fadeInUp">sua empresa na internet</p>
                                 <a href="#services" class="btn-get-started animated fadeInUp">precisa de um site? a gente faz</a>
@@ -120,7 +120,7 @@
                         <div class="carousel-background"><img src="img/intro/5.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2 class="animated fadeInDown">Servidores</span>
+                                <h2 class="animated fadeInDown">SERVIDORES</span>
                                 </h2>
                                 <p class="animated fadeInUp">para empresas fortes</p>
                                 <a href="#services" class="btn-get-started animated fadeInUp">soluções diretas</a>
@@ -132,7 +132,7 @@
                         <div class="carousel-background"><img src="img/intro/6.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2 class="animated fadeInDown">Redes</span>
+                                <h2 class="animated fadeInDown">REDES</span>
                                 </h2>
                                 <p class="animated fadeInUp">conectando você e seu cliente</p>
                                 <a href="#services" class="btn-get-started animated fadeInUp">conectar</a>
@@ -177,10 +177,8 @@
                 <div class="col-md-6 content">
                     <h2>Cuidamos da sua empresa</h2>
                     <h3>com a mesma dedicação e carinho com que você cuida dela.</h3>
-                    <p>
-                        Nossa missão é bastante clara: o pequeno empresário, a pequena empresa, o verdadeiro empreendedor é quem carrega o país nas costas. Nossa missão é carregar junto e dividir o peso dessa importância. Utilizamos nosso conhecimento de TI para fazer com que
-                        suas tarefas do dia a dia sejam mais leves para que você possa focar no que realmente importa: fazer a sua empresa crescer.
-                    </p>
+                    <p>Nossa missão é bastante clara: o pequeno empresário, a pequena empresa, o verdadeiro empreendedor é quem carrega o país nas costas. Nossa missão é carregar junto e dividir o peso dessa importância. Utilizamos nosso conhecimento de
+                        TI para fazer com que suas tarefas do dia a dia sejam mais leves para que você possa focar no que realmente importa: fazer a sua empresa crescer.</p>
                 </div>
             </div>
         </div>
@@ -206,7 +204,7 @@
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
                     <div class="section-heading">
-                        <h2>Serviços</h2>
+                        <h2>SERVIÇOS</h2>
                         <div class="heading-line"></div>
                         <p>Prestamos todo o suporte que a sua empresa precisa pra funcionar: cuidamos dos computadores, fazemos o seu site, ajudamos você com o sistema de vendas e controle... dando à você e a sua empresa o mesmo tratamento e importância
                             de uma grande corporação.</p>
@@ -384,7 +382,7 @@
                 <div class="section-heading">
                     <h2>AS TECNOLOGIAS</h2>
                     <div class="heading-line"></div>
-                    <p>As tecnologias que apoiam nosso trabalho e vão servir de base para a sua empresa também. <br> Líderes mundiais de tecnologia de ponta servindo à pequenas empresas como a sua, porque você e seu negócio não merecem menos que a perfeição.</p>
+                    <p>As tecnologias que apoiam nosso trabalho e vão servir de base para a sua empresa também. <br>Líderes mundiais de tecnologia de ponta servindo à pequenas empresas como a sua, porque você e seu negócio não merecem menos que a perfeição.</p>
                     <div class="col-xs-4">
                         <ul class="technologies">
                             <li class="wow fadeInDown" data-wow-delay="1.0s">
@@ -540,7 +538,7 @@
                 <div class="col-md-4">
                     <div class="contact-widget wow bounceInUp">
                         <i class="fa fa-phone fa-4x"></i>
-                        <h5>Nossos Telefones</h5>
+                        <h5>NOSSOS TELEFONES</h5>
                         <p>
                             +55 48 998.142.779<br> +55 48 999.676.020
 
@@ -550,9 +548,9 @@
                 <div class="col-md-4">
                     <div class="contact-widget wow bounceInRight">
                         <i class="fa fa-envelope fa-4x"></i>
-                        <h5>Nosso e-mail</h5>
+                        <h5>NOSSO EMAIL</h5>
                         <p>
-                            sasfln@sasfln.com.br<br />
+                            sas.floripa@gmail.com<br />
                         </p>
                     </div>
                 </div>
@@ -566,15 +564,15 @@
                                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span></a>
+                                </span></a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#">
                                 <span class="fa-stack fa-2x">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
                 </span></a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -588,7 +586,7 @@
                 <div class="col-md-12">
                     <p>Copyright &copy; 2019</p>
                     <div class="credits">
-                        Feito por <a href="https://www.sasfln.com.br/">.·.S.A.S.·.</a>
+                        Feito por <a href="https://www.sasfln.com.br/" font-face="nasa21regular">.·.S.A.S.·.</a>
                     </div>
                 </div>
             </div>
