--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <li class="current"><a href="#intro">Home</a></li>
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#services">Serviços</a></li>
-                    <li><a href="#portfolio">Clientes</a></li>
-                    <li><a href="#team">Time</a></li>
+                    <!--<li><a href="#portfolio">Clientes</a></li>-->
+                    <!--<li><a href="#team">Time</a></li>-->
                     <li><a href="#contact">Contato</a></li>
                 </ul>
             </div>
