--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -59,7 +59,7 @@
     </nav>
 
     <!-- Parallax 1 -->
-    <section id="parallax1" class="home-section parallax" data-stellar-background-ratio="0.5">
+    <section id="parallax3" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row vertical-align">
                 <div class="col-xs-12">
@@ -78,7 +78,9 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-4" style="background-color: red;">
                     <div class="section-heading">
-                        <h2 style="color: white">SUA PRESENÇA na internet</h2>
+                        <li class="wow bounceInDown">
+                            <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
+                        </li>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-8" style="background-color: blue;">
