--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <!-- Parallax 1 -->
+    <!-- Parallax 3 -->
     <section id="parallax3" class="home-section parallax" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row vertical-align">
@@ -76,14 +76,14 @@
     <section id="webdev" class="home-section bg-white">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-4" style="background-color: red;">
+                <div class="col-xs-12 col-sm-4">
                     <div class="section-heading">
                         <li class="wow bounceInDown">
-                            <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
+                            <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
                         </li>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-8" style="background-color: blue;">
+                <div class="col-xs-12 col-sm-8">
                     <div class="wow bounceInLeft">
                         <h3>Desenvolvimento Web</h3>
                         <div class="heading-line"></div>
