--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -58,63 +58,68 @@
         </div>
     </nav>
 
-    <!-- Parallax 3 -->
-    <section id="parallax3" class="home-section parallax" data-stellar-background-ratio="0.5">
-        <div class="container">
-            <div class="row vertical-align">
-                <div class="col-xs-12">
-                    <div class="color-light">
-                        <h2 class="wow bounceInDown" data-wow-delay="0.5s">DESENVOLVIMENTO WEB</h2>
-                        <p class="lead wow bounceInUp" data-wow-delay="1s">sua presença na internet</p>
+    <!-- intro -->
+    <section id="intro">
+        <div class="intro-container">
+            <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+
+                <div class="carousel-inner" role="listbox">
+
+                    <!-- Slide 1 -->
+                    <div class="item active">
+                        <div class="carousel-background"><img src="/img/pages/3.jpg" alt=""></div>
+                        <div class="carousel-container">
+                            <div class="carousel-content">
+                                <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</h2>
+                                <p class="animated fadeInUp">sua empresa na internet</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Webdev -->
-    <section id="webdev" class="home-section bg-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-4">
-                    <div class="section-heading">
-                        <li class="wow bounceInDown">
-                            <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
-                        </li>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-8">
-                    <div class="wow bounceInLeft">
-                        <h3>Desenvolvimento Web</h3>
-                        <div class="heading-line"></div>
-                        <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu um pacote
-                            de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao invés de semanas
-                            como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-12" style="background-color: white;">
-                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                        <li class="wow bounceInUp" data-wow-delay="0.5s">
-                            <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
-                        </li>
-                    </div>
-                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                        <li class="wow bounceInUp" data-wow-delay="1.0s">
-                            <a href="#"><img src="/img/techs/bootstrap.png" alt="" class="img-responsive"></a>
-                        </li>
-                    </div>
-                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                        <li class="wow bounceInUp" data-wow-delay="1.5s">
-                            <a href="#"><img src="/img/techs/heroku.png" alt="" class="img-responsive"></a>
-                        </li>
-                    </div>
-                    <div class="col-xs-6 col-sm-3" style="background-color: white;">
-                        <li class="wow bounceInUp" data-wow-delay="2.0s">
-                            <a href="#"><img src="/img/techs/usebasin.png" alt="" class="img-responsive"></a>
-                        </li>
-                    </div>
+    <section id="webdev">
+        <div class="row">
+            <div class="col-xs-12 col-sm-4">
+                <div class="section-heading">
+                    <li class="wow bounceInDown">
+                        <a href="#"><img src="/img/pages/webdev_1.jpg" alt="" class="img-responsive"></a>
+                    </li>
                 </div>
             </div>
+            <div class="col-xs-12 col-sm-8">
+                <div class="wow bounceInLeft">
+                    <h3>Desenvolvimento Web</h3>
+                    <div class="heading-line"></div>
+                    <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu um pacote
+                        de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao invés de semanas
+                        como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12" style="background-color: white;">
+                <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                    <li class="wow bounceInUp" data-wow-delay="0.5s">
+                        <a href="#"><img src="/img/techs/github.png" alt="" class="img-responsive"></a>
+                    </li>
+                </div>
+                <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                    <li class="wow bounceInUp" data-wow-delay="1.0s">
+                        <a href="#"><img src="/img/techs/bootstrap.png" alt="" class="img-responsive"></a>
+                    </li>
+                </div>
+                <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                    <li class="wow bounceInUp" data-wow-delay="1.5s">
+                        <a href="#"><img src="/img/techs/heroku.png" alt="" class="img-responsive"></a>
+                    </li>
+                </div>
+                <div class="col-xs-6 col-sm-3" style="background-color: white;">
+                    <li class="wow bounceInUp" data-wow-delay="2.0s">
+                        <a href="#"><img src="/img/techs/usebasin.png" alt="" class="img-responsive"></a>
+                    </li>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Contact -->
