--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -67,7 +67,7 @@
 
                     <!-- Slide 1 -->
                     <div class="item active">
-                        <div class="carousel-background"><img src="/img/pages/3.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="/img/intro/webdev_intro.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h2 class="animated fadeInDown">DESENVOLVIMENTO WEB</h2>
