--- a/pages/webdev.html
+++ b/pages/webdev.html
@@ -91,7 +91,7 @@
             <div class="col-xs-12 col-sm-8">
                 <div class="wow bounceInLeft">
                     <h3>Desenvolvimento Web</h3>
-                    <div class="heading-line"></div>
+                    <div class="content"></div>
                     <p>Um site é a fachada virtual de uma empresa. Para algumas pessoas, se a empresa não existe na internet, ela não existe na realidade também e este pensamento está cada vez mais comum. Foi pensando nisso que a SAS desenvolveu um pacote
                         de serviços de desenvolvimento de site pra ajudar você a colocar a sua empresa na internet. Seguindo uma metodologia própria chamada ASAP ("tão logo quanto possível") um site fica pronto em questão de horas ao invés de semanas
                         como de costume, fazendo a sua presença na web ser uma realidade instantânea.</p>
